kubernetes/fluxcd/infrastructure/configs/gateway/vault.yaml
# gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: all-in-one-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns
spec:
  gatewayClassName: cilium
  listeners:
    - name: nginx-https
      port: 443
      protocol: HTTPS
      hostname: porkbunlab.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: nginx-tls
        mode: Terminate
    - name: vault-https
      port: 443
      protocol: HTTPS
      hostname: vault.porkbunlab.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: vault-tls
        mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: hashicorp-vault
spec:
  parentRefs:
    - name: all-in-one-gateway
      namespace: kube-system
  hostnames:
    - vault.porkbunlab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hashicorp-vault
          port: 8200
          namespace: hashicorp-vault
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  parentRefs:
    - name: all-in-one-gateway
      namespace: kube-system
  hostnames:
    - porkbunlab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
          namespace: default
